# CS-273-Project

./: LICENSE  README.md  pyproject.toml  setup.py
configs/: Config.py
scripts/: train.py  view_results.py
src/nfl_bdb_2026/: __init__.py  cross_validation.py  cross_validation_sklearn.py  features.py  io.py  loss.py  model.py  paths.py  training.py  training_sklearn.py  util.py
src/nfl_bdb_2026/models/: __init__.py  arima.py  base.py  linear.py  registry.py  sttransformer.py  sttransformer_decoder.py  sttransformer_decoder_model.py  sttransformer_model.py  tree.py
