[tool.poetry]
name = "nfl-bdb-2026"
version = "0.1.0"
description = "NFL Big Data Bowl 2026 Prediction Competition"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "nfl_bdb_2026", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
tqdm = "^4.66.0"
pyyaml = "^6.0"
joblib = "^1.3.0"
plotly = "^6.5.0"
torch = {version = "^2.6.0", source = "pytorch-cu124"}
torchvision = {version = "^0.21.0", source = "pytorch-cu124"}
torchaudio = {version = "^2.6.0", source = "pytorch-cu124"}
polars = "^1.35.2"
lightgbm = "^4.6.0"
xgboost = "^3.1.1"
catboost = "^1.2.8"
statsmodels = "^0.14.0"
pyarrow = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

